Fixed tech skills icons to display nicely on mobile devices.

--- a/src/App.css
+++ b/src/App.css
@@ -45,3 +45,13 @@ strong {
   color: black;
   text-decoration: underline;
 }
+.icon {
+  margin-right: 15px;
+  margin-bottom: 15px;
+}
+.icon-container {
+  margin-top: 10px;
+}
+.social-link {
+  padding: 10px;
+}
